# Backend

./: .gitignore  README.md  alembic.ini  poetry.toml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 20221021-0154-8af04e2ba4bb-create_transport_tables.py
pubtransdb/: settings.py
pubtransdb/database/: connection.py  models.py  utils.py
pubtransdb/fastapi/: app.py  dependencies.py
pubtransdb/graphql/: context.py  identification.py  query.py  schema.py  server_info.py
scripts/: drop_and_create_database.py
snapshots/database/: schema.sql
snapshots/graphql/: schema.gql
tests/database/: test_database.py
tests/graphql/: test_graphql_api.py
