[tool.poetry]
name = "pubtransdb"
version = "0.0.0"
description = "Online database of information related to public transport"
license = "GPL-3.0-or-later"
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pubtransdb/Backend"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
