[tool.poetry]
name = "pubtransdb"
version = "0.0.0"
description = "Online database of information related to public transport"
license = "GPL-3.0-or-later"
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pubtransdb/Backend"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
pyproject-flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.isort]
src_paths = ["app", "tests"]
profile = "black"
line_length = 100
combine_star = true
lines_after_imports = 2

[tool.black]
line-length = 100

[tool.pydocstyle]
convention = "pep257"
add-ignore = "D1"

[tool.flake8]
max-line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
# Will cause issues when virtual environments are in a different place.
# See https://github.com/RobertCraigie/pyright-python#pre-commit
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
