[tool.poetry]
name = "pubtransdb"
version = "0.0.0"
description = "Online database of information related to public transport"
license = "GPL-3.0-or-later"
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pubtransdb/Backend"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["postgresql"], version = "^2.0.0b1"}
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.137.0"}
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
pyproject-flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-snapshot = "^0.9.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8-import-order = "^0.18.1"
alembic = {extras = ["tz"], version = "^1.8.1"}
strawberry-graphql = {extras = ["debug-server"], version = "^0.137.0"}

[tool.isort]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.black]
line-length = 100

[tool.pydocstyle]
convention = "pep257"
add-ignore = "D1"

[tool.flake8]
max-line-length = 100
application-import-names = "pubtransdb, tests, migrations"
import-order-style = "pycharm"

[tool.pyright]
typeCheckingMode = "basic"
# Will cause issues when virtual environments are in a different place.
# See https://github.com/RobertCraigie/pyright-python#pre-commit
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
